Fix up some things that prevented Yamler from building on Java 17
This fixed deprecated method calls and no-longer-supported casting behaviours.

Also fixes a few constructor calls and upgrades dependency versions to squash vulnerabilities.