@@ -42,7 +42,7 @@ public class Config implements Converter {
             Object instanceOfEnclosingClass = newInstance(enclosingClass);
             return type.getConstructor(enclosingClass).newInstance(instanceOfEnclosingClass);
         } else {
-            return type.newInstance();
+            return type.getDeclaredConstructor().newInstance();
         }
     }
 
